# ray-tracer-challenge

./: Cargo.toml  README.txt
src/: main.rs
src/basic/: mod.rs  point.rs  tuple.rs  vector.rs
