[package]
name = "ray_tracer_challenge"
version = "0.1.0"
authors = ["Miguel Lumapat <lamppot@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
simple_logger = "1.11.0"
structopt = { version = "0.3", default-features = false }

[dev-dependencies]
approx = "0.5.0"
rspec = "1.0"
